Added upsert endpoint for permissions
